fixat med padding och gap

--- a/css/media2.css
+++ b/css/media2.css
@@ -4,44 +4,53 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(9, 1fr);
-        gap: 10px;
+        gap: 5px;
+        padding: 8px;
     }
     .box1 {
         background-color: blueviolet;
         grid-column: 1 / 2;
+        border-radius: 4px;
     }
     .box2 {
         background-color: blueviolet;
         grid-column: 2 / 3;
+        border-radius: 4px;
     }
     .box3 {
         background-color: blueviolet;
         grid-column: 1 / 2;
         grid-row: 2 /2;
+        border-radius: 4px;
     }
     .box4 {
         background-color: blueviolet;
         grid-column: 2 / 3;
         grid-row: 2 / 2;
+        border-radius: 4px;
     }
     .ruta1 {
         background-color: pink;
         grid-column: 1 / 3;
         grid-row: 3 / 5;
+        border-radius: 4px;
     }
     .ruta2 {
         background-color: pink;
         grid-column: 1 / 3;
         grid-row: 5 / 7;
+        border-radius: 4px;
     }
     .ruta3 {
         background-color: pink;
         grid-column: 1 / 3;
         grid-row: 7 / 9;
+        border-radius: 4px;
     }
     footer {
         background-color: rgb(189, 184, 113);
         grid-column: 1 / 3;
         grid-row: 9;
+        border-radius: 4px;
     }
 }
